# strox

./: .gitignore  README.md  pyproject.toml
src/strox/: __init__.py  _cli.py
strox/: __init__.py  __main__.py
