[project]
name = "strox"
dynamic = ["version"]
description = "Find strings that matches approximately the given pattern"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
main = "strox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "strox/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["strox"]
